deployment/m/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis
spec:
    serviceName: redis-svc
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis
#                  env:
#                      - name: REDIS_PASSWORD
#                        valueFrom:
#                            secretKeyRef:
#                                name: redis-password
#                                key: redis-password
                  ports:
                      - containerPort: 6379
                        name: redis-port
                  volumeMounts:
                      - name: data
                        mountPath: /data/k8s/redis/data
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 128Mi
