deployment/m/02-redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    ports:
        -   port: 6379
            name: redis
    clusterIP: None
    selector:
        app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis
spec:
    selector:
        matchLabels:
            app: redis  # has to match .spec.template.metadata.labels
    serviceName: redis
    replicas: 2
    template:
        metadata:
            labels:
                app: redis  # has to match .spec.selector.matchLabels
        spec:
            containers:
                -   name: redis
                    image: redis
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 6379
                            name: redis
                    volumeMounts:
                        -   name: redis-persistent-storage
                            mountPath: /data/redis
            volumes:
                - name: redis-persistent-storage
                  persistentVolumeClaim:
                      claimName: claim-redis
