deployment/m/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kubtest-php
spec:
    replicas: 1 # easier debugging
    selector:
        matchLabels:
            run: kubtest-php
    template:
        metadata:
            labels:
                run: kubtest-php
        spec:
            containers:
                -   name: demo
                    image: eriktrapman/kubtest-php:b564b611acb923481a922f6b1779870e8819998a
                    ports:
                        -   containerPort: 9000
                            name: fastcgi
---
apiVersion: v1
kind: Service
metadata:
    name: kubtest-php-service
    labels:
        run: kubtest-php # name of deployment ?
spec:
    selector:
        run: kubtest-php # name of deployment ?
        #pod-template-hash: 69fbb64bf9
    ports:
        # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
        -   port: 9000
            targetPort: 9000
            name: fastcgi
            # Optional field
            # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
        #nodePort: 30007
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: kubtest-php-ingress
    annotations:
        ingress.kubernetes.io/rewrite-target: /
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/backend-protocol: FCGI
        nginx.ingress.kubernetes.io/fastcgi-index: index.php
        nginx.ingress.kubernetes.io/fastcgi-params-configmap: configmap
spec:
    rules:
        -   http:
                paths:
                    -   path: /
                        backend:
                            serviceName: kubtest-php-service
                            servicePort: fastcgi
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            run: redis
    template:
        metadata:
            labels:
                run: redis
        spec:
            volumes:
                -   name: redis-storage
                    emptyDir: {}
            containers:
                -   name: redis
                    image: redis
                    ports:
                        -   containerPort: 6379
                    volumeMounts:
                        -   name: redis-storage
                            mountPath: /data/k8s-redis
                    resources:
                        limits:
                            memory: '128Mi'
---
apiVersion: v1
kind: Service
metadata:
    name: kubtest-redis-service
    labels:
        run: redis # name of deployment ?
spec:
    type: NodePort
    selector:
        run: redis # name of deployment ?
        #pod-template-hash: 69fbb64bf9
    ports:
        # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
        -   port: 6379
            targetPort: 6379
            # Optional field
            # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
        #nodePort: 30007
